@@ -759,6 +759,15 @@ public class WebServer {
 	 */
 	public static void main(String[] args) {
 
+		if(TEnv.JDK_VERSION > 8 && !"true".equals(System.getProperty("jdk.attach.allowAttachSelf"))){
+
+			Logger.fremawork("Your are working on: JDK-" +TEnv.JDK_VERSION+". " +
+					"You should add java command arguments: " +
+					"-Djdk.attach.allowAttachSelf=true --add-exports java.base/java.nio=ALL-UNNAMED --add-exports java.base/jdk.internal.ref=ALL-UNNAMED");
+
+			System.exit(0);
+		}
+
 		//先初始化环境参数, 否则会导致 framework.properties 无法加载到对应环境的配置
 		for(int i=0;i<args.length;i++){
 			if(args[i].equals("--env") || args[i].equals("-e")){
